# some

./: README.md  arch.iuml  n-sella.sh  pyproject.toml  some.iuml  work.ipynb
data/: commands.sh  n_sella.sql  test.vuerd.json
